--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
@@ -110,92 +110,178 @@
                     CornerRadius="12"
                     BorderThickness="1"
                     BorderBrush="LightGray"
-                    Margin="16">
+                    Margin="16" Width="500">
 
-                        <DataGrid Grid.Row="10"  FontSize="12" FontWeight="SemiBold" 
-                             Margin="0,10,0,0" BorderThickness="0" AlternatingRowBackground="#788B9A" Width="500
-                                  ">
+                        <DataGrid Grid.Row="10" x:Name="OrderDataGrid"
+                              GridLinesVisibility="None" 
+                              SelectedItem="{Binding SelectedOrder}"
+                              HorizontalAlignment="Center" Margin="12" BorderThickness="0" 
+                              AlternationCount="2" AlternatingRowBackground="#FFF1F4FA"
+                              AutoGenerateColumns="False"
+                              ItemsSource="{Binding OrderD.order.listOfBook}">
+                            <DataGrid.InputBindings>
+                                <!--<MouseBinding MouseAction="LeftClick" 
+                                          Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.OrderDetailViewCommand}"
+                                          CommandParameter="{Binding SelectedItem._id, ElementName=OrderDataGrid}"/>-->
+                            </DataGrid.InputBindings>
+
                             <DataGrid.CellStyle>
                                 <Style TargetType="{x:Type DataGridCell}">
-                                    <Setter Property="Background" Value="#F1F1F1" />
-                                    <Setter Property="BorderBrush" Value="#E0E0E0" />
-                                    <Setter Property="BorderThickness" Value="1" />
-                                    <Setter Property="Padding" Value="5" />
+
                                 </Style>
                             </DataGrid.CellStyle>
-
-
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="Order ID" IsReadOnly="True" CanUserResize="False" Width="auto"></DataGridTextColumn>
-                                <DataGridTextColumn Header="Customer" IsReadOnly="True" CanUserResize="False" Width="*"></DataGridTextColumn>
-                                <DataGridTextColumn Header="Delivery Date" IsReadOnly="True" CanUserResize="False" Width="auto"></DataGridTextColumn>
-                                <DataGridTextColumn Header="Payment Type" IsReadOnly="True" CanUserResize="False" Width="auto"></DataGridTextColumn>
-                                <DataGridTemplateColumn Header ="Status" IsReadOnly="True" CanUserResize="False" Width="auto">
-                                    <DataGridTemplateColumn.CellTemplate >
-                                        <DataTemplate>
-                                            <StackPanel Orientation="Horizontal">
-                                                <Border Width="50" Height="25" CornerRadius="4" Margin="0 0 10 0" Background="Blue">
-                                                    <TextBlock Text="In Progress" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                                                </Border>
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-                                <DataGridTextColumn Header="Items Ordered" IsReadOnly="True" CanUserResize="False" Width="auto"></DataGridTextColumn>
-                                <DataGridTextColumn Header="Total Amount" IsReadOnly="True" CanUserResize="False" Width="auto"></DataGridTextColumn>
-                                <DataGridTemplateColumn Header="Operations" IsReadOnly="True" Width="auto">
+                                <DataGridTextColumn Header="Book ID" Binding="{Binding book._id}"
+                                                IsReadOnly="True" CanUserResize="False" 
+                                                Width="1*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="10" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+                                            <Setter Property="Foreground" Value="#788B9A"/>
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
+                                <DataGridTextColumn Header="Book Name" Binding="{Binding book.name}"
+                                                IsReadOnly="True" CanUserResize="False" 
+                                                Width="1*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="10" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+                                            <Setter Property="Foreground" Value="#788B9A"/>
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
+                                
+                                <DataGridTextColumn Header="Price" Binding="{Binding book.price}" 
+                                                IsReadOnly="True" CanUserResize="False" 
+                                                Width="1*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="10" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+                                            <Setter Property="Foreground" Value="#788B9A"/>
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
+                                <DataGridTextColumn Header="Quantity" Binding="{Binding quantity}"
+                                                IsReadOnly="True" CanUserResize="False" 
+                                                Width="1*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="10" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+                                            <Setter Property="Foreground" Value="#788B9A"/>
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>
+                                <!--<DataGridTextColumn Header="Total Price" Binding="{Binding totalPrice}" 
+                                                IsReadOnly="True" CanUserResize="False"
+                                                Width="1*">
+                                    <DataGridTextColumn.HeaderStyle>
+                                        <Style TargetType="DataGridColumnHeader">
+                                            <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="12" />
+                                            <Setter Property="FontWeight" Value="SemiBold" />
+
+                                        </Style>
+                                    </DataGridTextColumn.HeaderStyle>
+                                    <DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Margin" Value="0 10 0 10"/>
+                                            <Setter Property="HorizontalAlignment" Value="Center" />
+                                            <Setter Property="FontSize" Value="10" />
+
+                                            <Setter Property="FontWeight" Value="DemiBold" />
+                                            <Setter Property="Foreground" Value="#788B9A"/>
+                                        </Style>
+                                    </DataGridTextColumn.ElementStyle>
+                                </DataGridTextColumn>-->
+
+                                <DataGridTemplateColumn Header="" IsReadOnly="True" Width="auto">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <StackPanel Orientation="Horizontal">
-                                                <Button>
-                                                    <Image Source="../../Images/OrderManagementSVG/truck-solid.png" Width="15" Height="15" 
-                                        VerticalAlignment="Center" Margin="0 0 15 0" HorizontalAlignment="Right" />
+                                                <Button Width="20" Height="20" HorizontalAlignment="Center">
+                                                    <Image Source="../../Images/OrderManagementSVG/trash-can-solid.png" Width="10" Height="10" 
+                                        VerticalAlignment="Center" Margin="0 0 0 0" HorizontalAlignment="Center" />
                                                 </Button>
                                             </StackPanel>
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
                             </DataGrid.Columns>
+                            <DataGrid.RowStyle>
+
+                                <Style TargetType="DataGridRow">
+
+                                    <Style.Triggers>
+                                        <!--doesnt work-->
+                                        <Trigger Property="IsMouseOver"
+                           Value="True">
+                                            <Setter Property="FontWeight"
+                               Value="Bold" />
 
 
-                            <DataGrid ItemsSource="{Binding orders}">
-                                <DataGrid.Columns>
-                                    <DataGridTextColumn Header="Order ID" Binding="{Binding OrderId}" />
-                                    <DataGridTextColumn Header="Customer" Binding="{Binding Customer}" />
-                                    <DataGridTextColumn Header="Delivery Date" Binding="{Binding DeliveryDate}" />
-                                    <DataGridTextColumn Header="Payment Type" Binding="{Binding PaymentType}" />
-                                    <DataGridTextColumn Header="Status" Binding="{Binding Status}" />
-                                    <DataGridTextColumn Header="Items Ordered" Binding="{Binding ItemsOrdered}" />
-                                    <DataGridTextColumn Header="Total Amount" Binding="{Binding TotalAmount}" />
+                                        </Trigger>
 
-                                </DataGrid.Columns>
-                                <DataGrid.RowDetailsTemplate>
-                                    <DataTemplate>
-                                        <StackPanel>
-                                            <TextBlock Text="{Binding OrderDetails}" />
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </DataGrid.RowDetailsTemplate>
-                                <DataGrid.RowHeaderTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="+" Margin="0 0 4 0" />
-                                    </DataTemplate>
-                                </DataGrid.RowHeaderTemplate>
-                                <DataGrid.RowStyle>
-                                    <Style TargetType="DataGridRow">
-                                        <Setter Property="Background" Value="White" />
-                                        <Style.Triggers>
-                                            <Trigger Property="IsSelected" Value="True">
-                                                <Setter Property="Background" Value="#FFF1F4FA" />
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </DataGrid.RowStyle>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter Property="Foreground" Value="#FFFFFF"/>
+                                            <Setter Property="Background" Value="#3A36DB" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
 
-                            </DataGrid>
+                            </DataGrid.RowStyle>
 
-                        </DataGrid
-                              >
+
+
+                        </DataGrid>
                     </Border>
 
 
@@ -274,7 +360,7 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="25-04-2023"
+                            <TextBlock Text="{Binding OrderD.order.date}"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
                             <TextBlock Text="Deliver Date"
@@ -331,7 +417,7 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="1,000,000 VND"
+                            <TextBlock Text="{Binding OrderD.order.totalPrice}"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
                             <TextBlock Text="Payment"
